--- a/site/index.html
+++ b/site/index.html
@@ -1,22 +1,41 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-    <title>Loan Bonnel - Album photo</title>
     <meta charset="UTF-8" lang="fr" />
+    <title>Loan Bonnel - Album photo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/angular.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css"/>
+    <link rel="stylesheet" href="css/album.css" type="text/css"/>
+
+
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/angular.min.js" type="text/javascript"></script>
 </head>
 
 <body ng-app="AlbumApp">
 
-    <div ng-controller="AlbumController">
+<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar-inner">
+    <div class="container">
+        <a class="brand" href="/">Loan Bonnel</a>
+    </div>
+</div>
+</div>
 
-        <div ng-repeat="album in albums">
-            <h1>{{album.name}} ({{album.date}})</h1>
-            <p><a href="photos/{{album.name}}.zip">Télécharger l'album complet</a></p>
+    <div ng-controller="AlbumController" class="container">
 
-            <a href="photos/{{photo.lien}}" ng-repeat="photo in album.photos"><img height="100" ng-src="photos/{{photo.mini}}"/></a>
+        <div class="content">
+            <div ng-repeat="album in albums">
+                <h2>{{album.name}} ({{album.date}}) <a class="btn btn-info" ng-href="photos/{{album.name}}.zip">Télécharger l'album complet</a></h2>
+
+                <a ng-repeat="photo in album.photos" ng-href="photos/{{photo.lien}}">
+                    <img ng-src="photos/{{photo.mini}}" class="img-polaroid"/>
+                </a>
+
+            </div>
         </div>
 
     </div>
