--- a/site/index.html
+++ b/site/index.html
@@ -32,7 +32,7 @@
                 <h2>{{album.name}} ({{album.date}}) <a class="btn btn-info" ng-href="photos/{{album.name}}.zip">Télécharger l'album complet</a></h2>
 
                 <a ng-repeat="photo in album.photos" ng-href="photos/{{photo.lien}}">
-                    <img ng-src="photos/{{photo.mini}}" class="img-polaroid"/>
+                    <img ng-src="photos/{{photo.mini}}" style="height: 100px" class="img-polaroid"/>
                 </a>
 
             </div>
