Ajout de la date de fin des albums

--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,7 @@
 
         <div class="content">
             <div ng-repeat="album in albums">
-                <h2>{{album.name}} ({{album.date}}) <a class="btn btn-info" ng-href="photos/{{album.name}}.zip">Télécharger l'album complet</a></h2>
+                <h2>{{album.name}} ({{album.date}}<span ng-show="album.date !== album.maxDate"> - {{ album.maxDate }}</span>) <a class="btn btn-info" ng-href="photos/{{album.name}}.zip">Télécharger l'album complet</a></h2>
 
                 <a ng-repeat="photo in album.photos" ng-href="photos/{{photo.lien}}">
                     <img ng-src="photos/{{photo.mini}}" style="height: 100px" class="img-polaroid"/>
