--- a/site/index.html
+++ b/site/index.html
@@ -6,33 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
-    <link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/album.css" type="text/css"/>
 
 
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/angular.min.js" type="text/javascript"></script>
+    <script type="text/javascript"
+            src="http://slideshow.triptracker.net/slide.js"></script>
 </head>
 
-<body ng-app="AlbumApp">
+<body ng-app="AlbumApp"  ng-controller="AlbumController">
 
-<div class="navbar navbar-inverse navbar-fixed-top">
-<div class="navbar-inner">
-    <div class="container">
-        <a class="brand" href="/">Loan Bonnel</a>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="navbar-brand" href="/">Loan Bonnel</a>
+
+                <div class="nav-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a data-toggle="modal" ng-click="viewShow()">Diaporama</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-</div>
 
-    <div ng-controller="AlbumController" class="container">
+    <div class="container">
 
         <div class="content">
             <div ng-repeat="album in albums">
                 <h2>{{album.name}} ({{album.date}}<span ng-show="album.date !== album.maxDate"> - {{ album.maxDate }}</span>) <a class="btn btn-info" ng-href="photos/{{album.name}}.zip">Télécharger l'album complet</a></h2>
 
                 <a ng-repeat="photo in album.photos" ng-href="photos/{{photo.lien}}">
-                    <img ng-src="photos/{{photo.mini}}" style="height: 100px" class="img-polaroid"/>
+                    <img ng-src="photos/{{photo.mini}}" style="height: 100px; margin-bottom: 5px" class="img-thumbnail"/>
                 </a>
 
             </div>
